--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <!-- ヒーローセクション -->
     <!-- ここの 'background-image' のURLをあなたのメイン写真へのパスに変更してください。例: 'images/main-photo.jpg' -->
-    <section class="h-screen flex items-center justify-center text-center bg-cover bg-center" style="background-image: url('images/DSC03491.JPG');">
+    <section class="h-screen flex items-center justify-center text-center bg-cover bg-center" style="images/DSC03491.JPG: url('images/DSC03491.JPG');">
         <div class="bg-black bg-opacity-60 p-8 md:p-12 rounded-lg">
             <h1 class="text-3xl sm:text-5xl lg:text-6xl font-bold text-white mb-4 tracking-widest uppercase font-title leading-tight md:leading-normal">A Journey Through The Lens</h1>
             <p class="text-lg md:text-xl text-gray-300">世界の美しい瞬間を切り取る旅</p>
@@ -254,4 +254,5 @@
 
 </body>
 </html>
+
 
