--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
         <div class="gallery-container">
             <!-- 写真を追加するには、下の<div class="gallery-item">...</div>のブロックをコピーして、src="..."の部分をあなたの写真ファイルへのパス（例: "images/photo1.jpg"）に書き換えてください。 -->
             <div class="gallery-item cursor-pointer">
-                <img src="images/DSC03538.JPG" alt="青空と緑の丘" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
+                <img src="DSC03538.JPG" alt="青空と緑の丘" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
             </div>
              <div class="gallery-item cursor-pointer">
-                <img src="images/DSC03537.JPG" alt="草原と白い雲" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
+                <img src="DSC03537.JPG" alt="草原と白い雲" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
             </div>
         </div>
     </main>
@@ -141,12 +141,12 @@
             <div class="md:w-2/3 text-center md:text-left">
                 <h2 class="text-3xl font-bold mb-4 text-white font-title">About Me</h2>
                 <p class="text-lg text-gray-400 mb-4 leading-relaxed">
-                    はじめまして。[あなたの名前]です。カメラを片手に、世界中のまだ見ぬ景色を求めて旅をしています。
+                    はじめまして。Yutoです。カメラを片手に、世界中のまだ見ぬ景色を求めて旅をしています。
                     このサイトでは、旅の途中で出会った感動的な瞬間や、心に残った風景を共有しています。
                     一枚一枚の写真に込めた物語を感じていただけたら嬉しいです。
                 </p>
                 <p class="text-gray-400 leading-relaxed">
-                    My gear: Sony A7IV | 24-70mm f/2.8 GM | 70-200mm f/2.8 GM II
+                    My gear: Sony A7II | 24-70mm f/2.8 SIGMA Art | 35mm f/1.8 SONY
                 </p>
             </div>
         </div>
@@ -254,5 +254,6 @@
 
 </body>
 </html>
+
 
 
