--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="gallery-container">
             <!-- 写真を追加するには、下の<div class="gallery-item">...</div>のブロックをコピーして、src="..."の部分をあなたの写真ファイルへのパス（例: "images/photo1.jpg"）に書き換えてください。 -->
             <div class="gallery-item cursor-pointer">
-                <img src="DSC03502.JPG" alt="青空と緑の丘" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
+                <img src="DSC03502.JPG" alt="大屋根リング" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
             </div>
              <div class="gallery-item cursor-pointer">
                 <img src="DSC03537.JPG" alt="草原と白い雲" class="w-full h-auto rounded-lg shadow-lg" onclick="openModal(this.src, this.alt)">
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
